fix overflow-x on page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -49,7 +49,7 @@ ul {
 body {
   background: #E9E0D6;
   color: #254458;
-
+  overflow-x: hidden;
 }
 
 // header
